feat: user service (#6)
* add frontend

* before add shardcn

* frontend release

---------
