# apps/backend/internal/response/user.response.go
@@ -7,8 +7,7 @@ type (
 		Username      string `json:"username"` // username is uniqe of user in system
 		Email         string `json:"email"`    // email feild for register and forgot password processed
 		EmailVerifyed bool   `json:"email_verifyed"`
-		FirstName     string `json:"first_name"`
-		LastName      string `json:"last_name"`
+		FullName      string `json:"full_name"`
 		RoleID        uint   `json:"role_id"`
 	}
 )
